Fixed the overlapping copyright text.

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -17,12 +17,12 @@ h1 {
 
 #body-container {
   background-color: #f7f7f7;
-  max-width: 1500px;
+  max-width: 1000px;
   margin: auto;
   height: 100vh;
   border: 2px solid #f7f7f7;
   border-radius: 25px;
-  overflow: hidden;
+  overflow: scroll;
   }
 
 body {
@@ -43,16 +43,17 @@ body {
 
 #research-interests {
   text-align: left;
-  font-size: 25px;
+  font-size: 20px;
   position: relative;
   left: 50px;
-}
+
+  }
 
 #copyright {
  position: inherit;
- width: 1500px;
+ width: 1000px;
  text-align: center;
- bottom: 0px;
+ bottom: 12px;
 
 }
 
@@ -60,5 +61,6 @@ body {
   text-align: left;
   font-size: 20px;
   position:relative;
-  max-width: 1500px;
+  max-width: 1000px;
+  bottom: 40px;
   }
